# hrrr-vlm

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
data/: hurricane_activity.csv
logs/: hrrr-all-siglip-training-log.csv  hrrr-conus-siglip-training-log.csv
notebooks/: baseline-siglip.ipynb  hrrr-all-siglip.ipynb  hrrr-conus-siglip.ipynb
scripts/: dataset-generator.py  model-finetuning.py
src/hrrr_vlm/: __init__.py
src/hrrr_vlm/data/: __init__.py  caption_generator.py  config.py  constants.py  exceptions.py  generator.py  loader.py  models.py  weather_data.py
src/hrrr_vlm/eval/: __init__.py  dendrograms.py  embeddings.py  exceptions.py  linear_probe.py  retrieval.py  visualisation.py
src/hrrr_vlm/train/: __init__.py  data_loader.py  exceptions.py  train.py
src/hrrr_vlm/utils/: __init__.py  logger.py  model_config.py
tests/: __init__.py
tests/data/: __init__.py  test_caption_generator.py  test_generator.py  test_loader.py  test_weather_data.py
tests/eval/: __init__.py  test_embeddings.py
tests/train/: __init__.py  test_data_loader.py  test_train.py
