[project]
name = "hrrr-vlm"
version = "0.1.0"
description = "Vision Language Models for High-Resolution Rapid Refresh (HRRR) Weather Data"
readme = "README.md"
authors = [
    { name = "Adam Muhtar", email = "adam.muhtar23@imperial.ac.uk" }
]
maintainers = [
    { name = "Adam Muhtar", email = "adam.b.muhtar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.25.0",
    "datasets>=5.0.0",
    "herbie-data>=2026.3.0",
    "matplotlib>=3.11.0",
    "metpy>=1.7.1",
    "numba>=0.66.0",
    "peft>=0.19.1",
    "polars>=1.42.1",
    "protobuf>=7.35.1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "structlog>=25.4.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
    "umap-learn>=0.5.12",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ty>=0.0.56",
    "pip>=26.1.0",
]
lint = [
    "ruff>=0.15.20",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "tox-uv-bare>=1.35.2",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401",   # Allow Any type
    "BLE001",   # Allow catching broad Exception
    "C901",     # Allow complex structures
    "COM812",   # Incompatible with formatter skip-magic-trailing-comma
    "CPY001",   # Copyright notices not required
    "D205",     # Blank line after docstring description not required
    "ISC001",   # Incompatible with formatter
    "PLR0911",  # Allow many return statements
    "PLR0912",  # Allow many branching conditional statements
    "PLR0913",  # Allow many arguments
    "PLR0914",  # Allow many local variables
    "PLR0915",  # Allow many statements
    "PLR0917",  # Allow many positional arguments
    "PLW0717",  # Allow many statements in try clause
    "TRY003",   # Allow messages not defined in the exception class itself
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",     # Allow use of assert statements
    "S106",     # Allow pseudo hardcoded passwords
    "S108",     # Allow temporary files
    "SLF001",   # Allow access to private members
    "PLR2004",  # Allow use of magic numbers
    "PLR6301",  # Allow undecorated methods
    "RUF069",   # Allow float equality comparisons against exact literals
]
"*.ipynb" = [
    "E402",     # Allow module level import not at top of file
    "E501",     # Allow long lines
    "T201",     # Allow print statements
    "I001",     # Allow unsorted imports
    "FBT003",   # Allow boolean positional values in calls
    "S106",     # Allow placeholder tokens in login examples
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["F"]
