[project]
name = "hrrr-vlm"
version = "0.1.0"
description = "Vision Language Models for High-Resolution Rapid Refresh (HRRR) Weather Data"
readme = "README.md"
authors = [
    { name = "Adam Muhtar", email = "adam.muhtar23@imperial.ac.uk" }
]
maintainers = [
    { name = "Adam Muhtar", email = "adam.b.muhtar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.25.0",
    "datasets>=5.0.0",
    "herbie-data>=2026.3.0",
    "matplotlib>=3.11.1",
    "metpy>=1.7.1",
    "numba>=0.66.0",
    "peft>=0.19.1",
    "polars>=1.42.1",
    "protobuf>=7.35.1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "structlog>=25.4.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
    "umap-learn>=0.5.12",
    "xarray>=2026.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ty>=0.0.61",
    "pip>=26.1.0",
]
lint = [
    "ruff>=0.15.22",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "tox-uv-bare>=1.35.2",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
allowed-confusables = ["–", "−", "×"]   # Docstrings quote doctrine notation verbatim (en dashes, minus signs, ×).
select = ["ALL"]
fixable = ["ALL"]
preview = true
ignore = [
    "any-type",   # Allow Any type
    "blind-except",   # Allow catching broad Exception
    "complex-structure",     # Allow complex structures
    "missing-trailing-comma",   # Incompatible with formatter skip-magic-trailing-comma
    "missing-copyright-notice",   # Copyright notices not required
    "missing-blank-line-after-summary",     # Blank line after docstring description not required
    "single-line-implicit-string-concatenation",   # Incompatible with formatter
    "too-many-return-statements",  # Allow many return statements
    "too-many-branches",  # Allow many branching conditional statements
    "too-many-arguments",  # Allow many arguments
    "too-many-locals",  # Allow many local variables
    "too-many-statements",  # Allow many statements
    "too-many-positional-arguments",  # Allow many positional arguments
    "too-many-statements-in-try-clause",  # Allow many statements in try clause
    "raise-vanilla-args",   # Allow messages not defined in the exception class itself
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "assert",     # Allow use of assert statements
    "hardcoded-password-func-arg",     # Allow pseudo hardcoded passwords
    "hardcoded-temp-file",     # Allow temporary files
    "private-member-access",   # Allow access to private members
    "magic-value-comparison",  # Allow use of magic numbers
    "no-self-use",  # Allow undecorated methods
    "float-equality-comparison",   # Allow float equality comparisons against exact literals
]
"*.ipynb" = [
    "module-import-not-at-top-of-file",     # Allow module level import not at top of file
    "line-too-long",     # Allow long lines
    "print",     # Allow print statements
    "unsorted-imports",     # Allow unsorted imports
    "boolean-positional-value-in-call",   # Allow boolean positional values in calls
    "hardcoded-password-func-arg",     # Allow placeholder tokens in login examples
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["F"]
